[Admin] Add create/edit word functionality
